# CRISPR-be-sensor-deprecated

crispr-be-sensor/: pyproject.toml
crispr-be-sensor/crispr_be_sensor/preprocessing/: ExperimentProcessing.py  GuideAnnotation.py  GuideMapping.py
