[tool.poetry]
name = "crispr-be-sensor"
version = "0.1.0"
description = ""
authors = ["Basheer Becerra <bbecerr@outlook.com>"]
readme = "README.md"
packages = [{include = "crispr_be_sensor"}]

[tool.poetry.dependencies]
python = "^3.8"
pandarallel = "^1.6.4"
pandas = "^1.5.3"
numpy = "^1.24.2"
biopython = "^1.81"
typeguard = "^2.13.3"
matplotlib = "^3.7.0"
upsetplot = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
